Site design updates

--- a/packages/documentation/src/pages/about-mdx.mdx
+++ b/packages/documentation/src/pages/about-mdx.mdx
@@ -42,7 +42,7 @@ export class InlineClassComponent extends React.Component {
   }
   render() {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <div style={{ backgroundColor: '#112e51' }}>
           <DropDownPanel
             buttonText='Helpdesk'
@@ -83,7 +83,7 @@ export class inlineClassComponent extends React.Component {
 
   render() {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         Hello World
       </div>
     )
@@ -99,7 +99,7 @@ export class InlineClassComponent extends React.Component {
   }
   render() {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         Hello World
       </div>
     )
