--- a/packages/formation-react/src/components/AdditionalInfo/AdditionalInfo.mdx
+++ b/packages/formation-react/src/components/AdditionalInfo/AdditionalInfo.mdx
@@ -21,7 +21,7 @@ import AdditionalInfo from '@department-of-veterans-affairs/formation-react/Addi
 ```
 
 ### Rendered Component
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <AdditionalInfo triggerText="Additional Information">
     <ul>
       <li>info A</li>
