--- a/packages/formation-react/src/components/AlertBox/AlertBox.mdx
+++ b/packages/formation-react/src/components/AlertBox/AlertBox.mdx
@@ -50,7 +50,7 @@ import AlertBox from '@department-of-veterans-affairs/formation-react/AlertBox'
 ```
 
 ### Rendered Component
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <div>
     <AlertBox
       headline="Informational alert"
