--- a/packages/formation-react/src/components/Breadcrumbs/Breadcrumbs.mdx
+++ b/packages/formation-react/src/components/Breadcrumbs/Breadcrumbs.mdx
@@ -80,7 +80,7 @@ import Breadcrumbs from '@department-of-veterans-affairs/formation-react/Breadcr
 ```
 
 ### Rendered Component
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <Breadcrumbs>
     {[
       <a href="#" key="1">Home</a>,
