--- a/packages/formation-react/src/components/CollapsiblePanel/CollapsiblePanel.mdx
+++ b/packages/formation-react/src/components/CollapsiblePanel/CollapsiblePanel.mdx
@@ -23,7 +23,7 @@ import CollapsiblePanel from '@department-of-veterans-affairs/formation-react/Co
 ```
 
 ### Rendered Component:
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <CollapsiblePanel
     panelName="Collapsible Panel">
     <div>This panel defaults to closed.</div>
