--- a/packages/formation-react/src/components/DropDownPanel/DropDownPanel.mdx
+++ b/packages/formation-react/src/components/DropDownPanel/DropDownPanel.mdx
@@ -31,7 +31,7 @@ export class RenderComponent extends React.Component {
   }
   render() {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <div style={{ backgroundColor: '#112e51' }}>
           <DropDownPanel
             buttonText='Helpdesk'
