--- a/packages/formation-react/src/components/ErrorableCheckbox/ErrorableCheckbox.mdx
+++ b/packages/formation-react/src/components/ErrorableCheckbox/ErrorableCheckbox.mdx
@@ -31,7 +31,7 @@ import ErrorableCheckbox from '@department-of-veterans-affairs/formation-react/E
 ```
 
 ### Rendered Component
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <ErrorableCheckbox
     label='Errorable Checkbox'
     onValueChange={(value) => value}
