--- a/packages/formation-react/src/components/ErrorableCheckboxGroup/ErrorableCheckboxGroup.mdx
+++ b/packages/formation-react/src/components/ErrorableCheckboxGroup/ErrorableCheckboxGroup.mdx
@@ -35,7 +35,7 @@ import ErrorableCheckboxGroup from '@department-of-veterans-affairs/formation-re
 ```
 
 ### Rendered Component
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <ErrorableCheckboxGroup
     label='Errorable Checkbox Group'
     onValueChange={(value) => value}
