--- a/packages/formation-react/src/components/ErrorableMonthYear/ErrorableMonthYear.mdx
+++ b/packages/formation-react/src/components/ErrorableMonthYear/ErrorableMonthYear.mdx
@@ -26,7 +26,7 @@ state = {
 ```javascript
 import ErrorableMonthYear from '@department-of-veterans-affairs/formation-react/ErrorableMonthYear'
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <ErrorableMonthYear
     required
     date={this.state.date}
@@ -57,7 +57,7 @@ export class RenderedComponent extends React.Component {
   }
   render () {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <ErrorableMonthYear
           required
           date={this.state.date}
