--- a/packages/formation-react/src/components/ErrorableRadioButtons/ErrorableRadioButtons.mdx
+++ b/packages/formation-react/src/components/ErrorableRadioButtons/ErrorableRadioButtons.mdx
@@ -56,7 +56,7 @@ export class RenderedComponent extends React.Component {
   }
   render () {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <ErrorableRadioButtons
           onValueChange={(value)=> this.setState({ value })}
           id='defaultId'
