--- a/packages/formation-react/src/components/ErrorableSelect/ErrorableSelect.mdx
+++ b/packages/formation-react/src/components/ErrorableSelect/ErrorableSelect.mdx
@@ -49,7 +49,7 @@ export class RenderedComponent extends React.Component {
   }
   render () {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <ErrorableSelect
           errorMessage='This is the error message'
           label='select label'
