--- a/packages/formation-react/src/components/IconHelp/IconHelp.mdx
+++ b/packages/formation-react/src/components/IconHelp/IconHelp.mdx
@@ -20,7 +20,7 @@ import IconHelp from '@department-of-veterans-affairs/formation-react/IconHelp'
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <IconHelp
     color='#000000'
     cssClass='a-class'
