--- a/packages/formation-react/src/components/IconSearch/IconSearch.mdx
+++ b/packages/formation-react/src/components/IconSearch/IconSearch.mdx
@@ -20,7 +20,7 @@ import IconSearch from '@department-of-veterans-affairs/formation-react/IconSear
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <IconSearch
     color='#000000'
     cssClass='a-class'
