--- a/packages/formation-react/src/components/IconUser/IconUser.mdx
+++ b/packages/formation-react/src/components/IconUser/IconUser.mdx
@@ -20,7 +20,7 @@ import IconUser from '@department-of-veterans-affairs/formation-react/IconUser'
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <IconUser
     color='#000000'
     cssClass='a-class'
