--- a/packages/formation-react/src/components/LoadingIndicator/LoadingIndicator.mdx
+++ b/packages/formation-react/src/components/LoadingIndicator/LoadingIndicator.mdx
@@ -10,7 +10,7 @@ import LoadingIndicator from './LoadingIndicator'
 ```javascript
 import LoadingIndicator from '@department-of-veterans-affairs/formation-react/LoadingIndicator'
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <LoadingIndicator
     message='Loading your application'
     setFocus={true}
@@ -20,7 +20,7 @@ import LoadingIndicator from '@department-of-veterans-affairs/formation-react/Lo
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <LoadingIndicator
     message='Loading your application'
     setFocus={true}
