--- a/packages/formation-react/src/components/MegaMenu/MegaMenu.mdx
+++ b/packages/formation-react/src/components/MegaMenu/MegaMenu.mdx
@@ -381,7 +381,7 @@ export class RenderedComponent extends React.Component {
   }
   render() {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <header className="header">
           <div className="usa-grid usa-grid-full">
             <div id="mega-menu">
@@ -451,7 +451,7 @@ export class RenderedComponent extends React.Component {
   }
   render() {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <header className="header">
           <div className="usa-grid usa-grid-full">
             <div id="mega-menu">
