--- a/packages/formation-react/src/components/OMBInfo/OMBInfo.mdx
+++ b/packages/formation-react/src/components/OMBInfo/OMBInfo.mdx
@@ -19,7 +19,7 @@ import OMBInfo from '@department-of-veterans-affairs/formation-react/OMBInfo'
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <OMBInfo
     resBurden={15}
     ombNumber='Some number'
