--- a/packages/formation-react/src/components/Pagination/Pagination.mdx
+++ b/packages/formation-react/src/components/Pagination/Pagination.mdx
@@ -38,7 +38,7 @@ export class RenderedComponent extends React.Component {
   }
   render () {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <Pagination
           onPageSelect={(page) => this.setState({ page })}
           page={this.state.page}
