--- a/packages/formation-react/src/components/ProgressBar/ProgressBar.mdx
+++ b/packages/formation-react/src/components/ProgressBar/ProgressBar.mdx
@@ -10,7 +10,7 @@ import ProgressBar from './ProgressBar'
 ```javascript
 import ProgressBar from '@department-of-veterans-affairs/formation-react/ProgressBar'
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <ProgressBar
     percent={35}
   />
@@ -19,7 +19,7 @@ import ProgressBar from '@department-of-veterans-affairs/formation-react/Progres
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <ProgressBar
     percent={35}
   />
