--- a/packages/formation-react/src/components/ProgressButton/ProgressButton.mdx
+++ b/packages/formation-react/src/components/ProgressButton/ProgressButton.mdx
@@ -22,7 +22,7 @@ import ProgressButton from '@department-of-veterans-affairs/formation-react/Prog
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <ProgressButton
     buttonText='Progress Button'
     buttonClass='usa-button-primary'
