--- a/packages/formation-react/src/components/SegmentedProgressBar/SegmentedProgressBar.mdx
+++ b/packages/formation-react/src/components/SegmentedProgressBar/SegmentedProgressBar.mdx
@@ -10,7 +10,7 @@ import SegmentedProgressBar from './SegmentedProgressBar'
 ```javascript
 import SegmentedProgressBar from '@department-of-veterans-affairs/formation-react/SegmentedProgressBar'
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <SegmentedProgressBar
     current={4}
     total={6}
@@ -20,7 +20,7 @@ import SegmentedProgressBar from '@department-of-veterans-affairs/formation-reac
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <SegmentedProgressBar
     current={4}
     total={6}
