--- a/packages/formation-react/src/components/SortableTable/SortableTable.mdx
+++ b/packages/formation-react/src/components/SortableTable/SortableTable.mdx
@@ -62,7 +62,7 @@ import SortableTable from '@department-of-veterans-affairs/formation-react/Sorta
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <SortableTable
     className='va-table'
     currentSort={{
