--- a/packages/formation-react/src/components/SystemDownView/SystemDownView.mdx
+++ b/packages/formation-react/src/components/SystemDownView/SystemDownView.mdx
@@ -30,7 +30,7 @@ import SystemDownView from '@department-of-veterans-affairs/formation-react/Syst
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <SystemDownView
     messageLine1='This is the message that shows when the system is down.'
     messageLine2='This is an optional second line, for details or whatnot.'
