--- a/packages/formation-react/src/components/modal/Modal.mdx
+++ b/packages/formation-react/src/components/modal/Modal.mdx
@@ -78,7 +78,7 @@ export class RenderedComponent extends React.Component {
   }
   render() {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <button onClick={() => this.setState({showDefault: true})}>Show Default Modal</button>
         <Modal
           title="Default Modal"
