--- a/packages/documentation/src/pages/gatsby-configurations.mdx
+++ b/packages/documentation/src/pages/gatsby-configurations.mdx
@@ -93,7 +93,7 @@ module.exports = {
       resolve: `gatsby-mdx`,
       options: {
         defaultLayouts: {
-          default: require.resolve("./src/layouts/layout.js"),
+          default: require.resolve("./src/layouts/SidebarLayout.jsx"),
         }
       }
     },
