--- a/packages/formation-react/src/components/ErrorableDate/ErrorableDate.mdx
+++ b/packages/formation-react/src/components/ErrorableDate/ErrorableDate.mdx
@@ -68,7 +68,7 @@ export class RenderedComponent extends React.Component {
   }
   render () {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <ErrorableDate
           onValueChange={(date) => this.setState({date})}
           required={true}
