--- a/packages/formation-react/src/components/ErrorableTextArea/ErrorableTextArea.mdx
+++ b/packages/formation-react/src/components/ErrorableTextArea/ErrorableTextArea.mdx
@@ -47,7 +47,7 @@ export class RenderedComponent extends React.Component {
   }
   render () {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <ErrorableTextArea
           disabled={false}
           errorMessage='Error message'
