--- a/packages/formation-react/src/components/ErrorableTextInput/ErrorableTextInput.mdx
+++ b/packages/formation-react/src/components/ErrorableTextInput/ErrorableTextInput.mdx
@@ -47,7 +47,7 @@ export class RenderedComponent extends React.Component {
   }
   render () {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <ErrorableTextInput
           onValueChange={(e) => e}
           errorMessage='Error message'
