--- a/packages/formation-react/src/components/IconBase/IconBase.mdx
+++ b/packages/formation-react/src/components/IconBase/IconBase.mdx
@@ -26,7 +26,7 @@ import IconBase from '@department-of-veterans-affairs/formation-react/IconBase'
 
 ### Rendered Component
 
-<div className="rendered-component">
+<div className="site-c-reactcomp__rendered">
   <IconBase
     className='a-class'
     height="63"
