--- a/packages/formation-react/src/components/PrivacyAgreement/PrivacyAgreement.mdx
+++ b/packages/formation-react/src/components/PrivacyAgreement/PrivacyAgreement.mdx
@@ -38,7 +38,7 @@ export class RenderedComponent extends React.Component {
   }
   render () {
     return (
-      <div className="rendered-component">
+      <div className="site-c-reactcomp__rendered">
         <PrivacyAgreement
           onChange={(checked) => this.setState({ checked })}
           checked={this.state.checked}
