--- a/packages/documentation/src/pages/getting-started/environments.mdx
+++ b/packages/documentation/src/pages/getting-started/environments.mdx
@@ -4,17 +4,27 @@ title: Environments
 
 # Environments
 
-There are four environments for va.gov; one is when the site is running on a local developer's machine, and the other three are shared environments that are accessible publicly. These three public environments have changes to them deployed automatically. Additionally, the latest changes on all pull requests are automatically deployed to a review instance, which is a custom environment based on the shared dev environment. Each of these deployments is connected with services within the VA to facilitate testing, except for the dev API environment, which largely uses mock data in lieu of connecting to internal VA services.
-
-| Environment | url | api url | buildtype | NODE_ENV | Deployments |
+| Environment | site url | api url | buildtype | NODE_ENV | Deployments |
 | ----------- | -------- | ------------ | --------- | -------- | ----------- |
 | localhost | http://localhost:3001 | http://localhost:3000 | localhost | | |
 | development | https://dev.va.gov | https://dev-api.va.gov | vagovdev | | After a merge to master |
 | staging | https://staging.va.gov | https://staging-api.va.gov | vagovstaging | production | After a merge to master |
 | production | https://www.va.gov | https://api.va.gov | vagovprod | production | Daily, Monday - Friday |
 
-## Access
+There are four environments for va.gov;
+- **localhost** runs on a local developer's machine
+- **development, staging,** and **production** are shared environments that are accessible publicly.
 
-While both dev and staging are public, they are behind an HTTP basic auth password. You'll need to enter those [credentials](https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Work%20Practices/Accessing-Staging.md) when first opening the sites.
+**production** and **staging** APIs are connected with services within the VA to facilitate testing; **development** API largely uses mock data in lieu of connecting to internal VA services.
 
-In addition, there are many test users for these sites (and local environments) that can be used to test out different features. These can be found in the same [Accessing Staging](https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Work%20Practices/Accessing-Staging.md) doc as the basic auth credentials.
+## Deployment
+
+- **development, staging,** and **production** have changes to them deployed automatically after pull requests are merged into master.
+- Review instances have changes deployed to them automatically when pull requests are created. Review instances are custom environments based on the shared dev environment.
+
+## Access and test users
+
+See [Accessing Staging](https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Work%20Practices/Accessing-Staging.md) for
+
+- HTTP basic auth passwords needed to access **development** and **staging** environments, and
+- Test users that can be used to verify features in **localhost**, **development**, and **staging** enviornments.
