--- a/packages/documentation/src/pages/getting-started/environments.mdx
+++ b/packages/documentation/src/pages/getting-started/environments.mdx
@@ -11,7 +11,7 @@ title: Environments
 | staging | https://staging.va.gov | https://staging-api.va.gov | vagovstaging | production | After a merge to master |
 | production | https://www.va.gov | https://api.va.gov | vagovprod | production | Daily, Monday - Friday |
 
-There are four environments for va.gov;
+There are four environments for va.gov:
 - **localhost** runs on a local developer's machine
 - **development, staging,** and **production** are shared environments that are accessible publicly.
 
