--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -86,7 +86,7 @@ yarn watch
 
 *Build is complete when the CLI says* `Compiled successfully`
 
-9. Open the [http://localhost:3001](http://localhost:3001) in a browser
+9. Open [http://localhost:3001](http://localhost:3001) in a browser
 
 ## Backend and internal tools set up
 
