--- a/packages/documentation/src/pages/getting-started/environments.mdx
+++ b/packages/documentation/src/pages/getting-started/environments.mdx
@@ -27,4 +27,4 @@ There are four environments for va.gov:
 See [Accessing Staging](https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Work%20Practices/Accessing-Staging.md) for
 
 - HTTP basic auth **passwords** needed to access **development** and **staging** environments, and
-- **Test users** that can be used to verify features in **localhost**, **development**, and **staging** enviornments.
+- **Test users** that can be used to verify features in **localhost**, **development**, and **staging** environments.
