Update sidebar, various editing fixes

--- a/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
@@ -2,9 +2,9 @@
 title: Form Tutorial - Advanced
 ---
 
-## Form Tutorial - Advanced
+# Form Tutorial - Advanced
 
-#### Using Common Definitions
+## Using Common Definitions
 
 All of our forms share schemas with the back-end through `vets-json-schema`, the repository where we store JSON Schemas for validating data submitted to a `vets-api` API endpoint. Assuming you've created one of those schemas, the next step is to incorporate that into your form, along with other common definitions we've built.
 
@@ -165,6 +165,6 @@ The point of having these common definitions and sharing a schema between the fr
 
 <hr/>
 
-Back: [Vets Website Form Tutorial - Intermediate](./form-tutorial-intermediate)
+Back: [Vets Website Form Tutorial - Intermediate](/forms/form-tutorial-intermediate)
 
-Next: [Setting up Save in Progress](./save-in-progress)
+Next: [Setting up Save in Progress](/forms/save-in-progress)
