--- a/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
@@ -2,9 +2,7 @@
 title: Vets Website Form Tutorial - Basic
 ---
 
-## Form Tutorial - Basic
-
-#### Creating Your First Form
+# Form Tutorial - Basic
 
 In this doc, we'll walk through creating a new form and making some simple changes.
 
