--- a/packages/documentation/src/pages/forms/save-in-progress.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress.mdx
@@ -84,6 +84,6 @@ Once you've got all that set up, your form should appear on the profile page:
 
 <hr/>
 
-Back: [Form Tutorial - Advanced](./form-tutorial-advanced)
+Back: [Form Tutorial - Advanced](/forms/form-tutorial-advanced)
 
-Next: [Vets Website Forms in Production](./forms-in-production)
+Next: [Vets Website Forms in Production](/forms/forms-in-production)
