--- a/packages/documentation/src/pages/architecture/site-structure/client-overview.mdx
+++ b/packages/documentation/src/pages/architecture/site-structure/client-overview.mdx
@@ -1,4 +1,4 @@
-## VA.gov Client Overview
+# VA.gov client overview
 
 Welcome to the VA digital services platform front-end overview. The goal of this article is to provide a high level overview of our front end architecture to get you oriented with the [vets-website](https://github.com/department-of-veterans-affairs/vets-website) repository.
 
