--- a/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
@@ -2,13 +2,13 @@
 title: Form Tutorial - Intermediate
 ---
 
-## Form Tutorial - Intermediate
+# Form Tutorial - Intermediate
 
-### Form Validation & Conditional Fields
+## Form Validation & Conditional Fields
 
 Now that you've gone through and created a really simple form using the tutorial, let's take a look at how to handle some common use cases on forms.
 
-## Custom validation
+### Custom validation
 
 Because our forms are based on JSON Schema, you can rely on the built in types and pattern property to do a lot of your validation. However, sometimes you need validation rules that go beyond what JSON Schema offers. To write custom validation, we have a `ui:validation` helper:
 
@@ -79,7 +79,7 @@ page1: {
 
 Since we moved the validation array up to the root of `uiSchema`, the field data it is passed is an object containing both `email` and `confirmEmail`, and we can set validation errors on either field.
 
-## Custom validation error messages
+### Custom validation error messages
 
 In addition to the above custom validation, you can also customize the messages for the built in JSON Schema validation. For example, if I have some pattern validation, I can set an understandable message:
 
@@ -108,7 +108,7 @@ page1: {
 }
 ```
 
-## Conditional required fields
+### Conditional required fields
 
 In some cases you may want to have fields be required only under certain conditions. To handle that, you can use the `ui:required` helper:
 
@@ -141,11 +141,11 @@ page1: {
 
 In the above config, `myOtherField` will be required if `myField` equals "test". The `formData` parameter contains all of the form data, across all pages, so your conditional logic can be based on any other data in the form.
 
-## Conditionally displayed fields
+### Conditionally displayed fields
 
 Often when building forms you'll need to hide and show fields based on form data or other information. Our form system has three ways of doing so.
 
-### Expand under fields
+#### Expand under fields
 
 A common pattern is to expand some fields "underneath" others, when a user enters information in a field that requires more information to be collected:
 
@@ -222,7 +222,7 @@ page1: {
 
 In the above example, `myConditionalField` is hidden when `myField` is not true (meaning it's false or undefined).
 
-## Conditional pages
+### Conditional pages
 
 Another situation you may encounter is needing to make an entire page of the form conditional. You can do that with the `depends` property:
 
@@ -250,7 +250,7 @@ page1: {
 
 The depends function is passed the current form data, so you can check different conditions and return false if want to skip a page. Note that you want to make sure you're checking data a user would enter before potentially reaching this page, otherwise they won't ever see it.
 
-## View only data
+### View only data
 
 In some cases, you may have fields that you don't need to submit along with the form data. A confirmation email field, for example. In other cases you may also want to group fields into objects but not have that grouping reflected in the submitted data. This can be useful if you need to conditionally hide a group of fields and don't want to write hideIf functions every individual field.
 
@@ -338,6 +338,6 @@ That should get you started with some of the common validation and conditional f
 
 <hr/>
 
-Back: [Vets Website Form Tutorial - Basic](./form-tutorial-basic)
+Back: [Vets Website Form Tutorial - Basic](/forms/form-tutorial-basic)
 
-Next: [Vets Website Form Tutorial - Advanced](./form-tutorial-advanced)
+Next: [Vets Website Form Tutorial - Advanced](/forms/form-tutorial-advanced)
