change file name

--- a/packages/documentation/src/pages/getting-started/common-tasks/unit-tests.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/unit-tests.mdx
@@ -1,4 +1,4 @@
-## Unit Test
+## Unit Tests
 
 #### Where they live
 - Tests can live anywhere in the `src` directory, but in general are located in a directory close to the code or application that they are written to test.
