--- a/packages/documentation/src/pages/getting-started/index.mdx
+++ b/packages/documentation/src/pages/getting-started/index.mdx
@@ -10,7 +10,7 @@ These instructions cover the installation of dependencies needed for running VA.
 - **Backend and local tools setup** - links to other setup instructions for running `vets-api` and retrieving static content
 
 ## Prerequisites
-- [`homebrew`](http://brew.sh/) is recommended for for installing `nvm` but other installation approaches are on [`nvm` Github page](https://github.com/creationix/nvm#installation-and-update)
+- [homebrew](http://brew.sh/) is recommended for for installing `nvm` but other installation approaches are on [nvm Github page](https://github.com/creationix/nvm#installation-and-update)
 
 ## Node setup
 
