--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: When to use the Forms System
+title: VA Forms System
 ---
 
-# General structure of applications built with Forms System
+# VA.gov Forms System
 
-The Forms System provides a simple way to create a consistent form experience for veterans. Applications created with this framework follow this flow:
+The VA.gov Forms System (VAFS) provides a simple way to create a consistent experience for complex forms for Veterans. Applications created with this framework generally follow this flow:
 
 ```mermaid
 graph LR
@@ -13,16 +13,24 @@ graph LR
     C -- Submission --> D(Confirmation Page)
 ```
 
-## When to use the Forms System
+VAFS consists of several different pieces:
 
-The Forms system is best suited for forms that
+- Widgets and fields for common types of data collected on forms
+- Common validation functions used for different types of data
+- A form data flow process built on top of the React JSON Schema Form library
+- Hooks for custom validation, hiding/showing fields, and writing custom fields and widgets
+- Save in progress functionality
+
+## When to use VAFS 
+
+VAFS is best suited for forms that
 
 - are long enough to be organized across multiple pages,
 - have optionally captured or required fields, and
 - require field level or multiple field validation.
 
-The Forms System shouldn't be used when
+VAFS shouldn't be used when
 - the form is simple enough to fit on a single page, or
 - when the user experience doesn't benefit from **all** of the steps documented in the above flow.
 
-In these cases, it's recommended to either make simple single page form or to deploy a React app that doesn't use the Forms System.
+In these cases, it's recommended to either make simple single page form or to deploy a React app that doesn't use VAFS. We have form components available in the formation-react library, which can view [here](/platform).
