--- a/packages/documentation/src/pages/forms/save-in-progress.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress.mdx
@@ -4,11 +4,13 @@ title: Setting up Save in Progress
 
 # Setting up Save in Progress
 
-Forms on Vets.gov support the ability to save them in progress to a user's account and resume them later. Enabling Save in Progress requires
+Previous: [Advanced tutorial](./form-tutorial-advanced)
 
-- Configuring naming and messaging options in the **Form config**.
-- Making the Save In Progress form retrievable on the **User profile** page.
-- Adding links to the Save In Progress on **Static pages**.
+Forms on VA.gov support the ability to save them while in progress to a user's account and resume them later. Enabling Save in Progress requires
+
+- Configuring naming and messaging options in the **form config**.
+- Making the Save In Progress form retrievable on the **user profile** page.
+- Adding links to the Save In Progress on **static pages**.
 
 ## Form config
 
@@ -33,7 +35,7 @@ There are also a couple of messages you can set, which show up in various places
 
 ## User profile
 
-You will also need to make a couple changes in the user profile code, so that your form can show up in the list of saved forms on the account page. In `src/applications/personalization/profile360/util/helpers.jsx`, you should add your form to the three configuration objects: `formBenefits`, `formLinks`, `trackingPrefixes`, and `sipEnabledForms`. The information for each of these should be in your form config file.
+You will also need to make a couple changes in the user profile code, so that your form can show up in the list of saved forms on the account page. In `src/applications/personalization/dashboard/helpers.jsx`, you should add your form to the four configuration objects: `formBenefits`, `formLinks`, `trackingPrefixes`, and `sipEnabledForms`. The information for each of these should be in your form config file.
 
 ## Static pages
 
@@ -52,38 +54,31 @@ widgets:
 And somewhere in the file, where you want the widget to show up:
 
 ```html
-<div id="react-applicationStatus" class="static-page-widget">
+<div id="react-applicationStatus" class="static-page-widget" data-widget-type="health-care-app-status">
   <a class="usa-button-primary va-button-primary" href="/health-care/apply/application/">Apply for Health Care Benefits</a>
 </div>
 ```
 
 Note that the id matches the `root` property in the front matter. This is the link that will show up will the Javascript code is loading or if it fails to load.
 
+Also note the `data-widget-type` property. You'll need make that custom for your form and add it to the list in `src/applications/static-pages/widgetTypes.js`.
+
 Once that's done, you can open up the static pages entry file at `src/applications/static-pages/static-pages-entry.js` and make your changes. Here's an example for the healh care application:
 
 ```js
-const healthcarePages = new Set(['/health-care/', '/health-care/apply/', '/health-care/eligibility/']);
-
-...
-
-if (healthcarePages.has(location.pathname)) {
-  createApplicationStatus(store, {
-    formId: '1010ez',
-    additionalText: 'You can start your online application right now.',
-    applyLink: '/health-care/apply/',
-    applyText: 'Apply for Health Care Benefits'
-  });
-}
+createApplicationStatus(store, {
+  formId: '1010ez',
+  additionalText: 'You can start your online application right now.',
+  applyLink: '/health-care/apply/',
+  applyText: 'Apply for Health Care Benefits',
+  widgetType: widgetTypes.HEALTH_CARE_APP_STATUS,
+});
 ```
 
-The main things to note are the set of URLs where this widget will be active. The code block also has some configuration options for your form that should be easy to get from the form config object.
+The main things to note are that the `widgetType` should match the one you added to the widget types list. The code block also has some configuration options for your form that should be easy to get from the form config object.
 
 Once you've got all that set up, your form should appear on the profile page:
 
 ![](../../images/forms/saved_form.png)
 
-<hr/>
-
-Back: [Form Tutorial - Advanced](/forms/form-tutorial-advanced)
-
-Next: [Vets Website Forms in Production](/forms/forms-in-production)
+Next: [Forms in production](./forms/forms-in-production)
